# calculator

./: CMakeLists.txt  README.txt  TIME.txt  hoge
doc/: check.txt  eval.txt  f_calculate.txt  i_calculate.txt  tokenize.txt
doc/src/: eval.txt  main.txt  parse.txt  print.txt  tokenize.txt
include/: main.h
src/: check.c  eval.c  f_calculate.c  i_calculate.c  main.c  parse.c  print.c  tokenize.c
test/: Ans.txt  SEGV.txt  TODO  add.txt  div.txt  error.txt  factory.txt  mix.txt  mul.txt  nest.txt  nest1.txt  nest2.txt  power.txt  sub.txt  test.txt
